--- a/notebooks/plot_rout.ipynb
+++ b/notebooks/plot_rout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi from __init__.py\n"
+      "Hi from data procesing __init__.py\n",
+      "Hi from data_processing __init__.py\n"
      ]
     }
    ],
    "source": [
-    "from data.data_processing import utils\n"
+    "from tools.data_processing import utils\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.data_processing.custom_data import EgoPose"
    ]
   },
   {
